[package]
name = "prism"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.10"
tokio = { version = "1.0.1", features = ["rt", "rt-multi-thread", "time", "macros", "sync"] }
anyhow = "1.0.22"
tracing-futures = { version = "0.2.0", default-features = false, features = ["std-future"] }
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
clap = { version = "4.0.18", features = ["derive"] }
rustls-pemfile = "1.0.0"
rustls = "0.20.3"
directories-next = "2"
rand = "0.8"
rcgen = "0.10.0"
quinn = { version = "0.8", default-features = false, features = ["tls-rustls", "ring"] }
futures-util = { version = "0.3.11", default-features = false, features = ["io", "async-await-macro"] }
h3 = { git = "https://github.com/ggarber/h3", branch = "wt" }
h3-quinn = { git = "https://github.com/ggarber/h3", branch = "wt" }
http = "0.2.8"
bytes = "1.3.0"
async-std = "1.12.0"
async-trait = "0.1.62"
